<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTripDetails">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="addButtonImage"
        app:backgroundTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="#fff"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/DTD_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/DTD_TripImageDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DTD_CustomToolbar"
        app:srcCompat="@drawable/sample_img"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/DTD_CustomToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/DTD_ToolbarTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/DTD_toolbarText"
            android:textColor="#FFFEFE"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/TripDetails_Layout"
        android:layout_width="0dp"
        android:layout_height="378dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TripDetailsButtonLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/DTD_TripName_Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_tripNameLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_TripNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_tripNameText" />

        <TextView
            android:id="@+id/DTD_DestinationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_destinationLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_DestinationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_destinationText" />

        <TextView
            android:id="@+id/DTD_TripDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_tripDateLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_TripDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_tripDateText" />

        <TextView
            android:id="@+id/DTD_ReturnDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_returnDateLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_ReturnDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_returnDateText" />

        <TextView
            android:id="@+id/DTD_DescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_descriptionLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_DescriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_descriptionText" />

        <TextView
            android:id="@+id/DTD_TransportationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_transportationLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_TransportationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_transportationText" />

        <TextView
            android:id="@+id/DTD_RQRiskAssessmentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DTD_RQRiskAssessmentLabel"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DTD_RQRiskAssessmentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="@string/DTD_RQRiskAssessmentText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TripDetailsButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DTD_Image">

        <Button
            android:id="@+id/DTD_DetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="0.5"
            android:text="@string/DTD_detailsButtonText" />

        <Button
            android:id="@+id/DTD_ExpensesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2.5dp"
            android:layout_weight="0.5"
            android:text="@string/DTD_expensesButtonText" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="310dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/EXP_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/TripDetails_Layout" />


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>